Fix text align on small screen sizes for filter labels

--- a/knowyourwell/knowyourwell/ClientApp/src/components/css/wells.css
+++ b/knowyourwell/knowyourwell/ClientApp/src/components/css/wells.css
@@ -12,6 +12,7 @@
 
 .filter-container p {
   justify-self: end;
+  text-align: right;
   margin-bottom: 0;
 }
 
